--- a/harvil.html
+++ b/harvil.html
@@ -78,12 +78,14 @@
       <span class="ml-3 text-xl"></span>
       <span class="ml-3 text-xl"></span>
       <div class="alert alert-dark" role="alert">
-            <button type="button" class="btn btn-warning">About Us</button>
+            <a href="/" type="button" class="btn btn-warning">About Us</a>
     </div>
         <div class="card-group">
       <div class="card">
-        <img src="9.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
+        <a href="9.jpg" target="_panel">
+          <img class="img-fluid" src="9.jpg" alt="single image">
+          <span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
+        </a>        <div class="card-body">
           <h5 class="card-title">Dhansukhlal</h5>
           <p class="card-text"></p>
           <p class="card-text"><small class="text-muted"></small></p>
@@ -112,6 +114,7 @@
         </div>
       </div>
     </div>
+
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
