--- a/harvil.html
+++ b/harvil.html
@@ -82,11 +82,9 @@
     </div>
         <div class="card-group">
       <div class="card">
-        <a href="9.jpg" target="_panel">
-          <img class="img-fluid" src="9.jpg" alt="single image">
-          <span class="overlay"><i class="fa fa-heart-o" aria-hidden="true"></i></span>
-        </a>        <div class="card-body">
-          <h5 class="card-title">Dhansukhlal</h5>
+        <img src="9.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Dayaben</h5>
           <p class="card-text"></p>
           <p class="card-text"><small class="text-muted"></small></p>
         </div>
